Day_07/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
    - port: 80
      nodePort: 30000
      targetPort: 5173
      protocol: TCP
