Day_07/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: react-app
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
