Day_07/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: frontend-service
            port:
              number: 5173
